hphp/hack/test/typecheck/strict_switch/attrib_no_enable.php.exp
File "attrib_no_enable.php", line 3, characters 1-18:
Cannot use unstable feature: `strict_switch` (Parsing[1002])
