hphp/hack/test/typecheck/strict_switch/attrib_no_enable.php
<?hh

<<__StrictSwitch>>
function mixed(mixed $x): void {
  switch ($x) {
    default:
      break;
  }
}
